# rag-documentation-helper

./: .gitignore  README.md  pyproject.toml
backend/: ingestion.py  streamlit_app.py
backend/app/: main.py  utils.py
backend/app/api/routes/: chat.py
backend/app/core/: config.py  logger.py
backend/app/schemas/: message.py
backend/src/utils/: core.py  ingestion.py
backend/src/vector_stores/: base.py  faiss.py  milvus.py
backend/utils/: core.py
frontend/: package-lock.json
frontend/app/: MyRuntimeProvider.tsx  MyRuntimeStreamingProvider.tsx  layout.tsx  page.tsx
frontend/components/assistant-ui/: thread.tsx
